--- a/index.html
+++ b/index.html
@@ -15,53 +15,187 @@
   <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/font.css">
   <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/plans.css">
+  <link rel="stylesheet" href="css/benefits.css">
 </head>
 
 <body>
-<section class="background-black">
-  <div class="container">
-    <div class="d-flex justify-content-between align-items-center py-2 flex-wrap">
-      <div class="text-white mb-2 mb-md-0">0800 080 1007</div>
-      <div class="d-flex gap-3">
-        <a href="#" class="text-white" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
-        <a href="#" class="text-white" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
-      </div>
-    </div>
-  </div>
-</section>
-
-  <header>
-    <div class="position-relative">
-      <nav class="navbar navbar-expand-lg bg-transparent container" style="z-index: 2;">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Via local net</a>
-          <!-- Botão toggle para telas pequenas -->
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link color-white" href="#">Planos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link color-white" href="#">Contato</a>
-              </li>
-            </ul>
-          </div>
+  <section class="background-black">
+    <div class="container">
+      <div class="d-flex justify-content-between align-items-center py-2 flex-wrap">
+        <div class="text-white mb-2 mb-md-0">
+          <p class="number"><i class="fa-brands fa-whatsapp" style="color: #ffffff;"></i>0800 080 1007</p>
         </div>
-      </nav>
-      <div class="position-absolute" style="top:0; left:0; width:100%; overflow:hidden;">
-        <video autoplay loop muted src="img/Sem título (1).mp4" style="width:100%; height:600px; object-fit: inherit;">
-        </video>
+        <div class="d-flex gap-3">
+          <a href="#" class="text-white" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#" class="text-white" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+        </div>
       </div>
     </div>
+  </section>
+  <header style="position: relative; height: 600px; overflow: hidden;">
+    <!-- Vídeo de fundo -->
+    <video autoplay loop muted src="img/Sem título (2).mp4"
+      style="width:100%; height:100%; object-fit: inherit; position:absolute; top:0; left:0; z-index:0;">
+    </video>
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg bg-transparent container" style="position: relative; z-index: 1;">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img style="width:203px;" src="img/logo-inteira-removebg-preview.png"
+            alt=""></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">HOME</a></li>
+            <li class="nav-item"><a class="nav-link color-white" href="#">PLANOS DE INTERNET</a></li>
+            <li class="nav-item"><a class="nav-link color-white" href="#">SOBRE NÓS</a></li>
+            <li class="nav-item"><a class="nav-link color-white" href="#">FALE CONOSCO</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
   </header>
+  <!-- Section Planos -->
+  <section id="planos" class="py-5 ">
+    <div class="container">
+      <h2 class="text-center mb-2 league-spartan-Bold">PLANOS DE INTERNET</h2>
+      <h3 class="text-center league-spartan-Regular">Conecte-se ao que há de melhor em internet fibra óptica!</h3>
+
+      <div id="planosCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+
+          <div class="carousel-item active">
+            <div class="row">
+              <!-- Card 1 -->
+              <div class="col-md-4">
+                <div class="card text-center shadow-sm h-100">
+                  <div class="card-body">
+                    <h5 class="card-title">Plano Start</h5>
+                    <p class="card-text display-6 fw-bold">350<span class="league-spartan-ligth">MB</span></p>
+                    <p class="text-muted">R$ 99,99/mês</p>
+                    <p class="mt-2"><i class="fa-solid fa-check"></i>wifi</p>
+                    <p class="mt-2"><i class="fa-solid fa-check"></i>Instalação Grátis</p>
+                    <a href="#" class="btn btn-gradient-border mt-2">Assinar Agora</a>
+                    <p class="text-muted mt-3">*Consulte condições</p>
+                  </div>
+                </div>
+              </div>
+              <!-- Card 2 -->
+              <div class="col-md-4">
+                <div class="card text-center shadow-sm h-100">
+                  <div class="card-body">
+                    <h5 class="card-title">Plano family</h5>
+                    <p class="card-text display-6 fw-bold">400<span class="league-spartan-ligth">MB</span></p>
+                    <p class="text-muted">R$ 129,99/mês</p>
+                    <p class="mt-2"><i class="fa-solid fa-check"></i>wifi</p>
+                    <p class="mt-2"><i class="fa-solid fa-check"></i>Instalação Grátis</p>
+                    <a href="#" class="btn btn-gradient-border mt-2">Assinar Agora</a>
+                    <p class="text-muted mt-3">*Consulte condições</p>
+
+                  </div>
+                </div>
+              </div>
+              <!-- Card 3 -->
+              <div class="col-md-4">
+                <div class="card text-center shadow-sm h-100">
+                  <div class="card-body">
+                    <h5 class="card-title">Plano ultra</h5>
+                    <p class="card-text display-6 fw-bold">600<span class="league-spartan-ligth">MB</span></p>
+                    <p class="text-muted">R$ 139,99/mês</p>
+                    <p class="mt-2"><i class="fa-solid fa-check"></i>wifi</p>
+                    <p class="mt-2"><i class="fa-solid fa-check"></i>Instalação Grátis</p>
+                    <a href="#" class="btn btn-gradient-border mt-2">Assinar Agora</a>
+                    <p class="text-muted mt-3">*Consulte condições</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="card text-center shadow-sm h-100">
+                  <div class="card-body">
+                    <h5 class="card-title">home plus</h5>
+                    <p class="card-text display-6 fw-bold">500<span class="league-spartan-ligth">MB</span></p>
+                    <p class="text-muted">R$ 149,99/mês</p>
+                    <p class="mt-2"><i class="fa-solid fa-check"></i>wifi</p>
+                    <p class="mt-2"><i class="fa-solid fa-check"></i>Instalação Grátis</p>
+                    <a href="#" class="btn btn-gradient-border mt-2">Assinar Agora</a>
+                    <p class="text-muted mt-3">*Consulte condições</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="card text-center shadow-sm h-100">
+                  <div class="card-body">
+                    <h5 class="card-title">plano vision</h5>
+                    <p class="card-text display-6 fw-bold">400<span class="league-spartan-ligth">MB</span></p>
+                    <p class="text-muted">R$ 159,99/mês</p>
+                    <p class="mt-2"><i class="fa-solid fa-check"></i>wifi</p>
+                    <p class="mt-2"><i class="fa-solid fa-check"></i>Instalação Grátis</p>
+                    <p class="mt-2"><i class="fa-solid fa-check"></i>2 câmeras</p>
+                    <a href="#" class="btn btn-gradient-border mt-2">Assinar Agora</a>
+                    <p class="text-muted mt-3">*Consulte condições</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+        <!-- Controles -->
+        <button class="carousel-control-prev" type="button" data-bs-target="#planosCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon"
+            style="background-image: url('data:image/svg+xml;utf8,<svg fill=\'black\' xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 8 8\'><path d=\'M5.5 0L4.5 1 1 4.5 4.5 8 5.5 7 2.5 4.5z\'/></svg>');"></span>
+          <span class="visually-hidden">Anterior</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#planosCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon"
+            style="background-image: url('data:image/svg+xml;utf8,<svg fill=\'black\' xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 8 8\'><path d=\'M2.5 0L3.5 1 7 4.5 3.5 8 2.5 7 5.5 4.5z\'/></svg>');"></span>
+          <span class="visually-hidden">Próximo</span>
+        </button>
+      </div>
+    </div>
+  </section>
+  <!-- Section Beneficios -->
+  <section class="container py-5 Beneficios">
+    <div class="row align-items-center">
+      <!-- Coluna 1: Texto -->
+      <div class="col-md-6 mb-4 mb-md-0">
+        <h2 class="Beneficios-title league-spartan-Bold ">Internet que conecta você ao futuro</h2>
+      </div>
+      <!-- Coluna 2: Ícones com texto -->
+      <div class="col-md-6 bg-silver py-4">
+        <div class="row text-center">
+          <div class="col-4 d-flex flex-column align-items-center mb-4">
+            <i class="fa-solid fa-wifi fa-2x mb-2"></i>
+            <span>Wi-fi Premium</span>
+          </div>
+          <div class="col-4 d-flex flex-column align-items-center mb-4">
+            <i class="fa-solid fa-screwdriver-wrench fa-2x mb-2"></i>
+            <span>Instalação grátis e rápida</span>
+          </div>
+          <div class="col-4 d-flex flex-column align-items-center mb-4">
+            <i class="fa-solid fa-headset fa-2x"></i>
+            <span class="league-spartan-Bold">Suporte dedicado 24/7</span>
+          </div>
+          <!-- Se quiser mais ícones, só adicionar mais divs col-4 aqui -->
+        </div>
+      </div>
+    </div>
+  </section>
+  <section style="background-color: black;">
+    aqui
+  </section>
+  </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
     crossorigin="anonymous"></script>
